# url-short-flask

./: .gitignore  LICENSE  README.MD  observacoes.txt  pyproject.toml
app/: app.py  banco_de_dados.db  funcoes.py  model.py
app/templates/: base.html
