[tool.poetry]
name = "url-short-flask"
version = "0.1.0"
description = ""
authors = ["Diego Oliveira da Silva <diegolinkk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
